fix chart line overflow

--- a/src/global.css
+++ b/src/global.css
@@ -1271,3 +1271,6 @@ input[type='range']::-webkit-slider-runnable-track {
     height: 36px !important;
   }
 }
+.recharts-wrapper svg {
+  overflow: inherit !important;
+}
